# YARP-Streaming-Video

./: .travis.yml  README.md
programs/: ymanager.ini
programs/Windows/YARP_Streaming_Video_Emisor/YARP_Streaming_Video_Emisor/: YARP_Streaming_Video_Emisor.sln
programs/Windows/YARP_Streaming_Video_Emisor/YARP_Streaming_Video_Emisor/YARP_Streaming_Video_Emisor/: YARP_Streaming_Video_Emisor.cpp
programs/Windows/YARP_Streaming_Video_Emisor/YARP_Streaming_Video_Emisor/x64/Debug/: YARP_Streaming_Video_Emisor.ilk
programs/Windows/YARP_Streaming_Video_Receptor/YARP_Streaming_Video_Receptor/YARP_Streaming_Video_Receptor/: YARP_Streaming_Video_Receptor.cpp  YARP_Streaming_Video_Receptor.vcxproj  YARP_Streaming_Video_Receptor.vcxproj.filters  stdafx.cpp
programs/Windows/YARP_Streaming_Video_Receptor/YARP_Streaming_Video_Receptor/x64/Debug/: YARP_Streaming_Video_Receptor.ilk
programs/YARP_Streaming_Video_Emisor/: .travis.yml
programs/YARP_Streaming_Video_Receptor/: CMakeLists.txt  main.cpp
programs/linux/YARP_Streaming_Video_Emisor/: CMakeLists.txt  main.cpp
programs/linux/YARP_Streaming_Video_Receptor/: main.cpp
programs/linux/yarpStreamingVideo/reciever/: CMakeLists.txt  main.cpp
programs/linux/yarpStreamingVideo/sender/: CMakeLists.txt  main.cpp
programs/windows/yarpStreamingVideo/reciever/visualStudio/: YARP_Streaming_Video_Receptor.sln
programs/yarpmanager/applications/: YARP_Streaming_Video.xml
programs/yarpmanager/modules/: YARP_Streaming_Video_Receptor.xml
share/yarpmanager/applications/: yarpStreamingVideo.xml
share/yarpmanager/modules/: yarpStreamingVideoReciever.xml
(+22 files in other folders)
